[project]
name = "pygame"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ciastelix", email = "tenlegitmati@gmail.com"},
]
dependencies = [
    "pygame>=2.6.0",
    "Pillow>=10.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
